--- a/config/database.yml
+++ b/config/database.yml
@@ -13,13 +13,15 @@
 # Configure Using Gemfile
 # gem 'pg'
 #
-development:
+default: &default
   adapter: postgresql
-  encoding: unicode
-  database: sample_postgres_development
+  encoding: utf8
+  username: postgres 
   pool: 5
-  username: sample_postgres
-  password:
+
+development:
+  <<: *default
+  database: sample_app_dev
 
   # Connect on a TCP socket. Omitted by default since the client uses a
   # domain socket that doesn't need configuration. Windows does not have
@@ -40,17 +42,10 @@ development:
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
-  adapter: postgresql
-  encoding: unicode
-  database: sample_postgres_test
-  pool: 5
-  username: sample_postgres
-  password:
+  <<: *default
+  database: sample_app_test
 
 production:
-  adapter: postgresql
-  encoding: unicode
-  database: sample_postgres_production
-  pool: 5
-  username: sample_postgres
+  <<: *default
+  database: sample_app_prod
   password:
